--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,34 +1,5 @@
-.navbar-brand {
-    font-family: Aleo, Georgia, 'Times New Roman', Times, serif;
-    font-size: 32px;
-    color: #333333;
-}
-
-nav {
-    background-color: #f9f9f9;
-}
-
-.landing {
-    background-color: #f9f9f9;
-    overflow-x: hidden;
-}
-
-.big-section {
-    margin-left: 50px;
-    margin-right: 50px;
-    padding-top: 64px;
-}
-.primary-text {
-    padding-right: 20px;
-}
-
-h1 {
-    font-family: Aleo, Georgia, 'Times New Roman', Times, serif;
-    font-size: 64px;
-    color: black;
-    font-weight: 500;
-}
-
-.lead {
-    font-size: 24px;
-}
+body::before {
+    display: block;
+    content: '';
+    height: 40px;
+} 
